Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.1.0-rc1
-
None
-
ba5f8cd983d1d182b53445768c3762163d5ebeb1
Description
winrtrunner exits with error "The environment variable ExtensionSdkDir is not set."
To reproduce, just uninstall VCLibs from your system (Remove-AppxPackage in PowerShell). You can see the effect of the build environment on winrtrunner by unsetting ExtensionSdkDir in Creator.