WinRt: use the build environment for winrtrunner

Task-number: QTCREATORBUG-11998

Change-Id: Iafc7eb9ecd3c933c910756a8a855cbccf0af4b32
Reviewed-by: Eike Ziller <eike.ziller@digia.com>
Reviewed-by: Andrew Knight <andrew.knight@digia.com>